<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.PlayWithFriendActivity"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/setting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="370dp"
                android:background="@drawable/ic_settings" />

            <TextView
                android:id="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/righteous"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_title"
                android:fontFamily="@font/snell_round_hand"
                android:text="@string/app_tag_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/circle_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subTitle"
                android:layout_marginTop="@dimen/circle_player_name_top_margin"
                android:layout_marginLeft="@dimen/player_name_left_margin"
                android:text="@string/player_name"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:drawableLeft="@drawable/ic_circle_white"
                android:gravity="center"
                android:drawablePadding="10dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/player_one"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/circle_player"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/player_name_left_margin"
                android:layout_marginTop="@dimen/player_edittext_top_margin"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/circle_hint_text"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/cross_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player_one"
                android:layout_marginLeft="@dimen/player_name_left_margin"
                android:layout_marginTop="@dimen/cross_player_name_left_margin"
                android:text="@string/player_name"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:drawableLeft="@drawable/ic_cross_white"
                android:gravity="center"
                android:drawablePadding="10dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/player_two"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cross_player"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/player_edittext_top_margin"
                android:layout_marginLeft="50dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/cross_hint_text"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/choice"
                android:text="Who will move first?"
                android:layout_width="match_parent"
                android:layout_below="@+id/player_two"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>
            <ImageButton
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choice"
                android:layout_marginTop="@dimen/circle_cross_top_margin"
                android:layout_marginLeft="@dimen/circle_left_margin"
                android:background="@drawable/ic_circle_white"/>
            <ImageButton
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choice"
                android:layout_marginTop="@dimen/circle_cross_top_margin"
                android:layout_marginLeft="@dimen/cross_left_margin"
                android:layout_toRightOf="@+id/circle"
                android:background="@drawable/ic_cross_white"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/layout_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/play"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/play_button_top_margin"
                android:background="@drawable/layout_play_button"
                android:text="@string/play_button"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <Button
                android:id="@+id/quit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/play"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/quit_button_top_margin"
                android:background="@drawable/layout_quit_button"
                android:text="@string/quit_button"
                android:textAlignment="center"
                android:textColor="#e60000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quit"
                android:text="@string/app_design_By_name"
                android:layout_marginTop="@dimen/app_design_by_top_margin"
                android:layout_centerInParent="true"
                android:textSize="@dimen/app_design_by_text_size"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>