<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.HomePageActivity"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/icSetting"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/setting_button_margin"
        android:layout_marginEnd="@dimen/setting_button_margin"
        android:padding="8dp"
        android:src="@drawable/ic_settings"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appTitleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_title_layout_margin_top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appTitle"
            fontPath="font/Righteous-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/righteous"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/app_icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            fontPath="font/SnellRoundhand.ttf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/snell_round_hand"
            android:text="@string/app_tag_name"
            android:textColor="@color/white"
            android:textSize="@dimen/app_tag_name_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:maxWidth="180dp"
        android:src="@drawable/ic_game_board"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitleLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playWithJarvis"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/default_button_margin"
            android:layout_marginTop="@dimen/default_button_margin"
            android:layout_marginRight="@dimen/default_button_margin"
            android:background="@drawable/layout_button"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/you"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/vs1"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/vs1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/vs"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/jarvis"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vs1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playWithFriend"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/default_button_margin"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/default_button_margin"
            android:background="@drawable/layout_button"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/appBottomLine"
            app:layout_constraintTop_toBottomOf="@id/playWithJarvis">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/you"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/vs2"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/vs2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/vs"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/friend"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vs2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/appBottomLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="bottom"
            android:textSize="@dimen/app_design_by_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playWithFriend" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>